src/objects/GerenciadorMarcos__mdt.object
<CustomObject>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Aguardando resposta do Lojista</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Aguardando resposta do Magazine Luiza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguardando resposta do Cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devolução autorizada - aguardando envio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lojista recebeu o produto - aguar. análi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estorno autorizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devolução negada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estorno recusado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechado Automático</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fechado Cliente</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoRegistro__c</fullName>
        <label>Tipo de registro</label>
        <picklist>
            <picklistValues>
                <fullName>MktPlace - Cancelamento</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MktPlace - Dúvidas gerais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MktPlace - Troca</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Gerenciador de Marcos</label>
    <pluralLabel>Gerenciador de Marcos</pluralLabel>
</CustomObject>